# fc-search

./: .gitignore  Cargo.toml  LICENSE.md  TODO.md  bacon.toml  benchmark.yml  build.rs  flake.nix  rust-toolchain.toml  tailwind.config.js
assets/: tailwind.css
fc-search/: Cargo.toml
fc-search/src/: lib.rs  main.rs
frontend/: Cargo.toml  build.rs  tailwind.config.js
frontend/src/: main.rs
frontend/templates/: index.html  item.html
nix/: eval.nix  options.nix
src/: backend.rs  github.rs  lib.rs  main.rs  nix.rs  search.rs
src/search/: mod.rs  options.rs  packages.rs
state-dir/latest/: options.json  packages.json
templates/: index.html  item.html  option_item.html  options_index.html  package_item.html  packages_index.html  pagination.html
