[package]
name = "fc-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["macros"] }
itertools = "0.12.1"
mime_guess = "2.0.4"
reqwest = "0.11.24"
rust-embed = { version = "8.2.0", features = ["axum", "compression"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tantivy = "0.21.1"
tempfile = { version = "3.10.0", features = ["nightly"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }

[profile.dev]
debug = 0
strip = "debuginfo"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
